# gullwing

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURE_GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  README.md
.github/workflows/: ci.yml
benches/: format_spec.rs  formatting.rs  parsing.rs
examples/: shuffle.rs
src/: error.rs  lib.rs
src/format/: engine.rs  mod.rs  writer.rs
src/parse/: builder.rs  matcher.rs  mod.rs
src/spec/: mod.rs  parser.rs  types.rs
src/types/: mod.rs
tests/: error_cases.rs  format_spec.rs  roundtrip.rs  shuffle_integration.rs
